<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.robosto.robosto.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--I think I'll do forgot password on the web + email? I need to think about it more-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <!-- Email Recovery input and submit button -->

        <EditText
            android:id="@+id/editText20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/input_email"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_submit"
            android:id="@+id/button16"
            android:layout_gravity="center_horizontal" />

        <!-- Enter Token for Recovery: token and new password text inputs and submit button -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/input_email_token"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/input_password"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_recover_account"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>