<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.robosto.robosto.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <!-- Login: Username and Password Inputs -->

        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/input_username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textPassword"
            android:hint="@string/input_password"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

                <!-- Username and Password Submit Button -->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="1"
                android:text="@string/button_login"
                android:gravity="start"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="start"/>

            <View
                android:id="@+id/vertical"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorButtonLine"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center"/>

            <!-- Forgot Password Button -->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="?android:attr/selectableItemBackground"
                android:layout_weight="1"
                android:text="@string/button_forgot_password"
                android:gravity="end"
                android:layout_gravity="end"/>

        </LinearLayout>


        <!-- Create Account: Username, Password and Email Text Inputs and Submit Button-->

        <EditText
            android:id="@+id/editText12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/input_username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText13"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textPassword"
            android:hint="@string/input_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText14"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/input_email"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_create_account"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>