<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.robosto.robosto.ChangeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <!-- Change Email: New Email Input and Submit Button-->

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/input_new_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:inputType="textPassword"
                android:hint="@string/input_password"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/button_change_email"
                android:layout_gravity="center_horizontal" />

            <!-- Change Email: New Password Input and Submit Button -->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:inputType="textPassword"
                android:hint="@string/input_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:inputType="textPassword"
                android:hint="@string/input_new_password"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/button_change_password"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!--Spacing Button and View-->

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_gravity="start"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/colorButtonLine"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    />

                <!-- Forgot Password Button -->

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/button_forgot_password"
                    android:id="@+id/button16"
                    android:gravity="end"
                    android:layout_gravity="end"/>

            </LinearLayout>
        </LinearLayout>
</ScrollView>